# ESP32-Robot-Ctrl

./: .gitignore  README.md  brain.py  brain1.py  ipimg.py  last_frame.py  pyproject.toml  requirements.txt  robot_brain.py  robot_motors.py  robot_vision.py  rtsp.py  udp.py
ARCHIVE/: brain1.py  rtsp.py  rtspdetect.py  rtspgrab.py
ARCHIVE/drive_game/: config.py  drive.py  vision.py
ARCHIVE/follow/: follow1.py
ESP32/: boot.py  go.py  go_with_cam.py  listener.py  main.py
ESP32-CAM/: boot.py  go.py  go_backup.py
ESP32-CAM/robot_server/: __init__.py  routes.py  server.py  wheels.py
ESP32-CAM/robot_server/static/: styles.css
ESP32-CAM/robot_server/templates/: drive.html  image.html  page.html  photo.html
ESP32/robot_server/: __init__.py  config.py  routes.py  server.py  wheels.py
ESP32/robot_server/templates/: api.html  drive.html  home.html
drive_game/: drive-old1.py  drive-old2.py  ipcam.py  robot_api.py
follow/: follow2.py  text_follow.txt
robot/: __main__.py  robot_config.py  robot_motors.py  robot_vision.py
robot_v4/: boot.py
robot_v4/robot_server/: config.py  routes.py
robot_v4/robot_server/templates/: home.html
